--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.0",
   "description": "Provides general helper functions for @esri/solution.js.",
   "main": "dist/node/index.js",
-  "unpkg": "dist/umd/common.umd.js",
+  "unpkg": "dist/umd/common.umd.min.js",
   "module": "dist/esm/index.js",
   "js:next": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
