--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.0",
   "description": "Manages the deployment of a Solution for @esri/solution.js.",
   "main": "dist/node/index.js",
-  "unpkg": "dist/umd/deployer.umd.js",
+  "unpkg": "dist/umd/deployer.umd.min.js",
   "module": "dist/esm/index.js",
   "js:next": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
