--- a/packages/feature-layer/package.json
+++ b/packages/feature-layer/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.0",
   "description": "Manages the creation and deployment of feature layers and services for @esri/solution.js.",
   "main": "dist/node/index.js",
-  "unpkg": "dist/umd/feature-layer.umd.js",
+  "unpkg": "dist/umd/feature-layer.umd.min.js",
   "module": "dist/esm/index.js",
   "js:next": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
