--- a/packages/viewer/package.json
+++ b/packages/viewer/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.0",
   "description": "to do",
   "main": "dist/node/index.js",
-  "unpkg": "dist/umd/viewer.umd.js",
+  "unpkg": "dist/umd/viewer.umd.min.js",
   "module": "dist/esm/index.js",
   "js:next": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
