--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -15,9 +15,11 @@
     "@esri/arcgis-rest-auth": "^2.4.0",
     "@esri/arcgis-rest-portal": "^2.4.0",
     "@esri/arcgis-rest-request": "^2.4.0",
-    "@esri/arcgis-rest-service-admin": "^2.4.0"
+    "@esri/arcgis-rest-service-admin": "^2.4.0",
+    "rollup": "^1.22.0"
   },
   "dependencies": {
+    "@esri/arcgis-rest-types": "^2.4.0",
     "adlib": "^3.0.0",
     "tslib": "^1.10.0"
   },
