--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -18,10 +18,11 @@
     "@esri/solution-common": "^0.5.5",
     "@esri/solution-feature-layer": "^0.5.5",
     "@esri/solution-simple-types": "^0.5.5",
-    "@esri/solution-storymap": "^0.5.5"
+    "@esri/solution-storymap": "^0.5.5",
+    "rollup": "^1.22.0"
   },
   "dependencies": {
-    "@esri/arcgis-rest-types": "^2.3.0",
+    "@esri/arcgis-rest-types": "^2.4.0",
     "tslib": "^1.10.0"
   },
   "scripts": {
