--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -18,7 +18,8 @@
     "@esri/solution-common": "^0.5.5",
     "@esri/solution-feature-layer": "^0.5.5",
     "@esri/solution-simple-types": "^0.5.5",
-    "@esri/solution-storymap": "^0.5.5"
+    "@esri/solution-storymap": "^0.5.5",
+    "rollup": "^1.22.0"
   },
   "dependencies": {
     "@esri/arcgis-rest-types": "^2.4.0",
