--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -16,7 +16,8 @@
     "@esri/arcgis-rest-feature-layer": "^2.4.0",
     "@esri/arcgis-rest-portal": "^2.4.0",
     "@esri/arcgis-rest-request": "^2.4.0",
-    "@esri/solution-common": "^0.5.5"
+    "@esri/solution-common": "^0.5.5",
+    "rollup": "^1.22.0"
   },
   "dependencies": {
     "@esri/arcgis-rest-types": "^2.4.0",
