--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "@esri/arcgis-rest-auth": "^2.4.0",
     "@esri/solution-common": "^0.5.5",
-    "@esri/solution-simple-types": "^0.5.5"
+    "@esri/arcgis-rest-request": "^2.4.0",
+    "@esri/solution-simple-types": "^0.5.5",
+    "rollup": "^1.22.0"
   },
   "dependencies": {
     "@esri/arcgis-rest-types": "^2.4.0",
