--- a/packages/viewer/package.json
+++ b/packages/viewer/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "@esri/arcgis-rest-auth": "^2.4.0",
     "@esri/arcgis-rest-portal": "^2.4.0",
-    "@esri/solution-common": "^0.5.5"
+    "@esri/solution-common": "^0.5.5",
+    "rollup": "^1.22.0"
   },
   "dependencies": {
     "@esri/arcgis-rest-types": "^2.4.0",
