--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -13,6 +13,7 @@
   ],
   "devDependencies": {
     "@esri/arcgis-rest-auth": "^2.6.0",
+    "@esri/arcgis-rest-feature-layer": "^2.6.0",
     "@esri/arcgis-rest-portal": "^2.6.0",
     "@esri/arcgis-rest-request": "^2.6.0",
     "@esri/arcgis-rest-service-admin": "^2.6.0",
