--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -20,6 +20,7 @@
     "rollup": "^1.22.0"
   },
   "dependencies": {
+    "@esri/arcgis-rest-types": "^2.6.0",
     "adlib": "^3.0.0",
     "tslib": "^1.10.0"
   },
