--- a/packages/common/examples/copyItemInfo/package.json
+++ b/packages/common/examples/copyItemInfo/package.json
@@ -11,6 +11,7 @@
     "@esri/arcgis-rest-service-admin": "^2.6.0",
     "@esri/solution-common": "^0.5.8",
     "@types/requirejs": "^2.1.31",
+    "lerna": "^3.19.0",
     "typescript": "^3.7.2"
   },
   "dependencies": {
@@ -19,7 +20,9 @@
     "tslib": "^1.10.0"
   },
   "scripts": {
-    "build": "start cmd.exe /c \".\\node_modules\\.bin\\tsc.cmd -p .\\tsconfig.json\""
+    "build": "start cmd.exe /c \".\\node_modules\\.bin\\tsc.cmd -p .\\tsconfig.json\"",
+    "postinstall": "npm run bootstrap",
+    "bootstrap": "lerna bootstrap --ignore-scripts"
   },
   "repository": {},
   "contributors": [],
