--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -16,6 +16,7 @@
     "@esri/solution-feature-layer": "^0.5.8",
     "@esri/solution-simple-types": "^0.5.8",
     "@esri/solution-storymap": "^0.5.8",
+    "@esri/solution-group": "^0.5.8",
     "rollup": "^1.22.0"
   },
   "dependencies": {
