--- a/packages/creator/examples/createSolutionFromGroup/package.json
+++ b/packages/creator/examples/createSolutionFromGroup/package.json
@@ -11,8 +11,10 @@
     "@esri/arcgis-rest-service-admin": "^2.6.1",
     "@esri/solution-common": "^0.5.8",
     "@esri/solution-creator": "^0.5.8",
+    "@esri/solution-feature-layer": "^0.5.8",
     "@esri/solution-file": "^0.5.8",
     "@esri/solution-group": "^0.5.8",
+    "@esri/solution-simple-types": "^0.5.8",
     "@types/requirejs": "^2.1.31",
     "lerna": "^3.19.0",
     "typescript": "^3.7.2"
