--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@esri/solution-common": "^0.5.8",
     "@esri/solution-feature-layer": "^0.5.8",
+    "@esri/solution-file": "^0.5.8",
     "@esri/solution-group": "^0.5.8",
     "@esri/solution-simple-types": "^0.5.8",
     "@esri/solution-storymap": "^0.5.8",
