--- a/demos/deploySolution/package.json
+++ b/demos/deploySolution/package.json
@@ -29,6 +29,7 @@
   "@esri/solution-feature-layer": "^0.11.0",
   "@esri/solution-file": "^0.11.0",
   "@esri/solution-group": "^0.11.0",
+  "@esri/solution-hub-types": "^0.11.0",
   "@esri/solution-simple-types": "^0.11.0",
   "@esri/solution-storymap": "^0.11.0"
  }
