--- a/packages/file/package.json
+++ b/packages/file/package.json
@@ -14,11 +14,13 @@
   ],
   "devDependencies": {
     "rollup": "^1.22.0",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.2",
+    "@esri/solution-common": "^0.12.0"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "@esri/solution-common": "^0.12.0"
+  },
   "dependencies": {
-    "@esri/solution-common": "^0.12.0",
     "tslib": "^1.10.0"
   },
   "scripts": {
