--- a/packages/hub-types/package.json
+++ b/packages/hub-types/package.json
@@ -19,6 +19,8 @@
     "@esri/hub-common": "^4.0.0",
     "@esri/hub-initiatives": "^4.0.0",
     "@esri/hub-sites": "^4.0.0",
+    "@esri/solution-common": "^0.12.0",
+    "@esri/solution-simple-types": "^0.12.0",
     "rollup": "^1.22.0",
     "typescript": "^3.9.2"
   },
@@ -28,11 +30,11 @@
     "@esri/arcgis-rest-request": "^2.13.1",
     "@esri/hub-common": "^4.0.0",
     "@esri/hub-initiatives": "^4.0.0",
-    "@esri/hub-sites": "^4.0.0"
+    "@esri/hub-sites": "^4.0.0",
+    "@esri/solution-common": "^0.12.0",
+    "@esri/solution-simple-types": "^0.12.0"
   },
   "dependencies": {
-    "@esri/solution-common": "^0.12.0",
-    "@esri/solution-simple-types": "^0.12.0",
     "tslib": "^1.10.0"
   },
   "scripts": {
