--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -14,14 +14,17 @@
   ],
   "devDependencies": {
     "rollup": "^1.22.0",
+    "@esri/solution-common": "^0.12.0",
+    "@esri/solution-simple-types": "^0.12.0",
     "typescript": "^3.9.2"
   },
   "dependencies": {
-    "@esri/solution-common": "^0.12.0",
-    "@esri/solution-simple-types": "^0.12.0",
     "tslib": "^1.10.0"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "@esri/solution-common": "^0.12.0",
+    "@esri/solution-simple-types": "^0.12.0"
+  },
   "scripts": {
     "prepare": "npm run build",
     "build": "npm run build:node && npm run build:umd && npm run build:esm",
