--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -17,25 +17,22 @@
     "@esri/arcgis-rest-portal": "^2.11.0",
     "@esri/arcgis-rest-request": "^2.11.0",
     "@esri/arcgis-rest-types": "^2.11.0",
-    "@esri/hub-common": "^4.0.0",
-    "@esri/hub-sites": "^4.0.0",
-    "@esri/hub-initiatives": "^4.0.0",
-    "@esri/solution-common": "^0.12.0",
-    "@esri/solution-feature-layer": "^0.12.0",
-    "@esri/solution-file": "^0.12.0",
-    "@esri/solution-group": "^0.12.0",
-    "@esri/solution-simple-types": "^0.12.0",
-    "@esri/solution-storymap": "^0.12.0",
-    "@esri/solution-hub-types": "^0.12.0"
+    "@esri/hub-common":"^4.2.0",
+    "@esri/hub-sites":"^4.2.0",
+    "@esri/hub-initiatives":"^4.2.0",
+    "@esri/solution-common": "^0.13.0",
+    "@esri/solution-feature-layer": "^0.13.0",
+    "@esri/solution-file": "^0.13.0",
+    "@esri/solution-group": "^0.13.0",
+    "@esri/solution-simple-types": "^0.13.0",
+    "@esri/solution-storymap": "^0.13.0",
+    "@esri/solution-hub-types": "^0.13.0"
   },
   "devDependencies": {
     "@esri/arcgis-rest-auth": "^2.11.0",
     "@esri/arcgis-rest-portal": "^2.11.0",
     "@esri/arcgis-rest-request": "^2.11.0",
     "@esri/arcgis-rest-types": "^2.11.0",
-    "@esri/hub-common": "^4.0.0",
-    "@esri/hub-initiatives": "^4.0.0",
-    "@esri/hub-sites": "^4.0.0",
     "@esri/solution-common": "^0.13.0",
     "@esri/solution-feature-layer": "^0.13.0",
     "@esri/solution-file": "^0.13.0",
@@ -43,7 +40,9 @@
     "@esri/solution-hub-types": "^0.13.0",
     "@esri/solution-simple-types": "^0.13.0",
     "@esri/solution-storymap": "^0.13.0",
-    "@esri/solution-hub-types": "^0.12.0"
+    "@esri/hub-common":"^4.2.0",
+    "@esri/hub-initiatives":"^4.2.0",
+    "@esri/hub-sites":"^4.2.0"
   },
   "dependencies": {
     "tslib": "^1.10.0"
