--- a/packages/viewer/package.json
+++ b/packages/viewer/package.json
@@ -17,6 +17,9 @@
     "rollup": "^1.22.0",
     "typescript": "^3.9.2"
   },
+  "peerDependencies": {
+    "@esri/solution-common": "^0.14.0"
+  },
   "dependencies": {
     "@esri/solution-common": "^0.13.0",
     "tslib": "^1.10.0"
