--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "release:prepare": "lerna publish --no-git-tag-version --no-push --skip-npm --yes && node ./support/changelog.js",
     "release:review": "git --no-pager diff --word-diff",
     "release:publish": "bash ./support/publish.sh",
-    "release:publish2": "lerna publish from-package --yes",
+    "release:publish-retry": "lerna publish from-package --no-git-tag-version --no-push --yes",
     "postinstall": "npm run bootstrap",
     "bootstrap": "lerna bootstrap",
     "precommit": "lint-staged",
