--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -22,7 +22,6 @@
     "@esri/hub-initiatives": "^4.2.0",
     "@esri/hub-sites": "^4.2.0",
     "@esri/solution-common": "^0.16.0",
-    "@esri/solution-simple-types": "^0.16.0",
     "rollup": "^1.22.0",
     "typescript": "^3.9.3"
   },
@@ -35,8 +34,7 @@
     "@esri/hub-common": "^4.2.0",
     "@esri/hub-initiatives": "^4.2.0",
     "@esri/hub-sites": "^4.2.0",
-    "@esri/solution-common": "^0.16.0",
-    "@esri/solution-simple-types": "^0.16.0"
+    "@esri/solution-common": "^0.16.0"
   },
   "dependencies": {
     "tslib": "^1.10.0"
