--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,10 @@
 {
   "packages": [
-    "packages/*"
+    "packages/*",
+    "demos/*"
   ],
+  "bootstrap": {
+    "ignore": "demos/*"
+  },
   "version": "0.16.3"
 }
