--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -14,15 +14,10 @@
   ],
   "devDependencies": {
     "@esri/arcgis-rest-auth": "^2.13.1",
-    "@esri/arcgis-rest-feature-layer": "^2.13.1",
     "@esri/arcgis-rest-portal": "^2.13.1",
     "@esri/arcgis-rest-request": "^2.13.1",
-    "@esri/arcgis-rest-service-admin": "^2.13.1",
     "@esri/hub-common": "^4.2.0",
-    "@esri/hub-initiatives": "^4.2.0",
-    "@esri/hub-sites": "^4.2.0",
-    "@esri/solution-common": "^0.16.3",
-    "@esri/solution-simple-types": "^0.16.3",
+    "@esri/solution-common": "^0.16.2",
     "rollup": "^1.22.0",
     "typescript": "^3.9.3"
   },
@@ -31,10 +26,7 @@
     "@esri/arcgis-rest-portal": "^2.13.1",
     "@esri/arcgis-rest-request": "^2.13.1",
     "@esri/hub-common": "^4.2.0",
-    "@esri/hub-initiatives": "^4.2.0",
-    "@esri/hub-sites": "^4.2.0",
-    "@esri/solution-common": "^0.16.3",
-    "@esri/solution-simple-types": "^0.16.3"
+    "@esri/solution-common": "^0.16.2"
   },
   "dependencies": {
     "tslib": "^1.10.0"
