--- a/lerna.json
+++ b/lerna.json
@@ -3,8 +3,10 @@
     "packages/*",
     "demos/*"
   ],
-  "bootstrap": {
-    "ignore": "demos/*"
+  "command": {
+    "bootstrap": {
+      "ignore": "demos/*"
+    }
   },
   "version": "0.16.3"
 }
