--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -36,7 +36,7 @@
     "@esri/hub-sites": "^4.2.0"
   },
   "dependencies": {
-    "@esri/arcgis-html-sanitizer": "^2.2.0",
+    "@esri/arcgis-html-sanitizer": "~2.1.0",
     "@types/lodash.isplainobject": "^4.0.6",
     "adlib": "^3.0.4",
     "jszip": "3.4.0",
