--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A library running in Node.js and modern browsers for transferring ArcGIS Online items from one organization to another.",
   "devDependencies": {
     "@khanacademy/tota11y": "^0.2.0",
+    "@octokit/rest": "^18.0.0",
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-json": "^4.0.3",
     "@rollup/plugin-node-resolve": "^7.1.3",
