--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jasmine-core": "^3.5.0",
     "karma": "^5.0.9",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^2.0.2",
     "karma-edge-launcher": "^0.4.2",
     "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "^2.0.1",
