--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.17.3",
   "description": "A library running in Node.js and modern browsers for transferring ArcGIS Online items from one organization to another.",
   "devDependencies": {
+    "@chiragrupani/karma-chromium-edge-launcher": "^2.0.0",
     "@khanacademy/tota11y": "^0.2.0",
     "@octokit/rest": "^18.0.0",
     "@rollup/plugin-commonjs": "^11.1.0",
@@ -41,7 +42,6 @@
     "karma": "^5.0.9",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^2.0.2",
-    "karma-edge-launcher": "^0.4.2",
     "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-diff-reporter": "^2.0.0",
@@ -76,7 +76,7 @@
     "tslint-config-prettier": "^1.6.0",
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.15.0",
-    "typescript": "^3.9.5",
+    "typescript": "^3.9.7",
     "uuid": "^8.0.0"
   },
   "dependencies": {
