--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ sudo: false
 notifications:
   email: false
 node_js:
-  - 12
+  - "node"
+  - "lts/*"
   - 10
-  - 8
 cache: npm
 script:
   - npm run test:ci
@@ -27,5 +27,4 @@ addons:
   firefox: latest
 branches:
   only:
-    - gh-pages
-    - /.*/
+    - master
