--- a/demos/createSolution/package.json
+++ b/demos/createSolution/package.json
@@ -19,6 +19,8 @@
     "@esri/hub-common": "^6.9.1",
     "@esri/hub-initiatives": "^6.9.1",
     "@esri/hub-sites": "^6.9.1",
+    "@esri/hub-teams": "^6.9.1",
+    "@esri/hub-types": "^6.9.1",
     "@esri/solution-common": "^0.18.2",
     "@esri/solution-creator": "^0.18.2",
     "@esri/solution-feature-layer": "^0.18.2",
