--- a/demos/implementedTypes/package.json
+++ b/demos/implementedTypes/package.json
@@ -16,9 +16,11 @@
     "@esri/arcgis-rest-portal": "^2.17.0",
     "@esri/arcgis-rest-request": "^2.17.0",
     "@esri/arcgis-rest-service-admin": "^2.17.0",
-    "@esri/hub-common": "^4.2.0",
-    "@esri/hub-initiatives": "^4.2.0",
-    "@esri/hub-sites": "^4.2.0",
+    "@esri/hub-common": "^6.9.1",
+    "@esri/hub-initiatives": "^6.9.1",
+    "@esri/hub-sites": "^6.9.1",
+    "@esri/hub-teams": "^6.9.1",
+    "@esri/hub-types": "^6.9.1",
     "@esri/solution-common": "^0.18.2",
     "@esri/solution-creator": "^0.18.2",
     "@esri/solution-deployer": "^0.18.2",
