--- a/demos/sanitizeGroupItems/package.json
+++ b/demos/sanitizeGroupItems/package.json
@@ -25,6 +25,8 @@
     "@esri/hub-common": "^6.9.1",
     "@esri/hub-initiatives": "^6.9.1",
     "@esri/hub-sites": "^6.9.1",
+    "@esri/hub-teams": "^6.9.1",
+    "@esri/hub-types": "^6.9.1",
     "@esri/solution-common": "^0.18.2",
     "tslib": "^1.13.0"
   }
