--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -19,8 +19,6 @@
     "@esri/arcgis-rest-request": "^2.18.0",
     "@esri/arcgis-rest-service-admin": "^2.18.0",
     "@esri/hub-common": "^6.9.1",
-    "@esri/hub-initiatives": "^6.9.1",
-    "@esri/hub-sites": "^6.9.1",
     "@types/adlib": "^3.0.1",
     "rollup": "^1.22.0",
     "typescript": "^3.9.7"
@@ -31,9 +29,7 @@
     "@esri/arcgis-rest-portal": "^2.18.0",
     "@esri/arcgis-rest-request": "^2.18.0",
     "@esri/arcgis-rest-service-admin": "^2.18.0",
-    "@esri/hub-common": "^6.9.1",
-    "@esri/hub-initiatives": "^6.9.1",
-    "@esri/hub-sites": "^6.9.1"
+    "@esri/hub-common": "^6.9.1"
   },
   "dependencies": {
     "@esri/arcgis-html-sanitizer": "~2.1.0",
