--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "rimraf": "^2.6.2",
     "rollup": "^2.31.0",
     "rollup-plugin-filesize": "^6.1.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.27.3",
     "rollup-plugin-uglify": "^3.0.0",
