--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   },
   "scripts": {
     "start:deployer": "lerna run build && http-server ./demos/deploySolution",
+    "prebuild": "IF EXIST FROMREPO npm install",
     "build": "lerna run build",
     "build:umd": "lerna run build:umd",
     "clean": "npm run clean:src && npm run clean:dist",
