--- a/package.json
+++ b/package.json
@@ -92,7 +92,6 @@
   },
   "scripts": {
     "start:deployer": "lerna run build && http-server ./demos/deploySolution",
-    "prebuild": "IF EXIST FROMREPO npm install",
     "build": "lerna run build",
     "build:umd": "lerna run build:umd",
     "clean": "npm run clean:src && npm run clean:dist",
@@ -140,6 +139,7 @@
     "release:review": "git --no-pager diff --word-diff",
     "release:publish": "bash ./support/publish.sh",
     "release:publish-retry": "lerna publish from-package --no-git-tag-version --no-push --yes",
+    "prepostinstall": "IF EXIST FROMREPO npm install",
     "postinstall": "npm run bootstrap",
     "bootstrap": "lerna bootstrap",
     "precommit": "lint-staged",
