--- a/package.json
+++ b/package.json
@@ -139,8 +139,7 @@
     "release:review": "git --no-pager diff --word-diff",
     "release:publish": "bash ./support/publish.sh",
     "release:publish-retry": "lerna publish from-package --no-git-tag-version --no-push --yes",
-    "prepostinstall": "IF EXIST FROMREPO npm install",
-    "postinstall": "npm run bootstrap",
+    "postinstall": "IF EXIST FROMREPO npm install || npm run bootstrap",
     "bootstrap": "lerna bootstrap",
     "precommit": "lint-staged",
     "y:link:hub": "lerna run y:link:hub",
