--- a/package.json
+++ b/package.json
@@ -60,18 +60,19 @@
     "prettier": "^1.19.1",
     "resolve": "^1.5.0",
     "rimraf": "^2.6.2",
-    "rollup": "^2.31.0",
+    "rollup": "^1.26.0",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-filesize": "^6.1.1",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.27.3",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript2": "^0.25.3",
     "rollup-plugin-uglify": "^3.0.0",
     "semantic-release": "^17.1.1",
     "shelljs": "^0.7.8",
     "sinon": "^9.0.2",
     "slug": "^0.9.1",
     "sri-toolbox": "0.2.0",
-    "tinymce": "^5.5.1",
     "ts-node": "^8.3.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.6.0",
@@ -81,6 +82,8 @@
     "uuid": "^8.0.0"
   },
   "dependencies": {
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
     "tslib": "^1.13.0"
   },
   "lint-staged": {
@@ -116,7 +119,6 @@
     "test:all": "npm run test:node && npm run test:chrome",
     "test:coverage": "npm run test:chrome:ci && npm run coveralls",
     "test:coverage:win": "npm run test:chrome:ci && npm run coveralls:win",
-    "test:retire": "retire",
     "coveralls": "cat coverage/lcov/lcov.info | node node_modules/coveralls/bin/coveralls",
     "coveralls:win": "start cmd.exe /c \"type coverage\\lcov\\lcov.info | node node_modules/coveralls/bin/coveralls.js\"",
     "docs:build": "rimraf docs/build && npm run docs:typedoc && npm run docs:build:acetate && npm run docs:build:sass && npm run docs:build:images && npm run docs:build:js",
