--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^10.17.0",
     "@types/sinon": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "acetate": "^2.0.8",
     "acetate-cli": "^1.0.1",
@@ -34,6 +35,10 @@
     "es6-promise": "^4.2.8",
     "eslint": "^7.12.0",
     "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^30.7.3",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
+    "eslint-plugin-react": "^7.21.5",
     "event-stream": "3.3.4",
     "fetch-mock": "^7.7.3",
     "gh-pages": "^1.1.0",
