--- a/packages/hub-types/package.json
+++ b/packages/hub-types/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@esri/solution-hub-types",
   "version": "1.1.5",
-  "description": "Manages the creation and deployment of Hub Site and Hub Page item types for @esri/solution.js..",
+  "description": "Manages the creation and deployment of Hub Site and Hub Page item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/hub-types.umd.min.js",
   "module": "dist/esm/index.js",
