--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "node-sass": "^7.0.0",
     "onchange": "^7.1.0",
     "prettier": "^2.4.1",
+    "regenerator-runtime": "^0.13.9",
     "resolve": "^1.19.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.60.0",
@@ -77,7 +78,7 @@
     "sri-toolbox": "0.2.0",
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.10",
-    "typescript": "^4.4.4",
+    "typescript": "^4.5.5",
     "uuid": "^8.0.0"
   },
   "dependencies": {
